Atualizado erro de digitação

--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
 
                 <blockquote class="blockquote text-center">
 
-                    <p class="mb-0">O sucesso não é garantido, mas o fracasso é certo se você nâo estiver emocionalmente envolvido em seu trabalho.</p>
+                    <p class="mb-0">O sucesso não é garantido, mas o fracasso é certo se você não estiver emocionalmente envolvido em seu trabalho.</p>
                     <footer class="blockquote-footer">Biz Stone <cite title="Source Title"> Fundador do Twitter</cite></footer>
 
                 </blockquote>
